--- a/frontend/src/Components/NewCollections/NewCollections.css
+++ b/frontend/src/Components/NewCollections/NewCollections.css
@@ -1,4 +1,4 @@
-.popular {
+.new-collection {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -6,22 +6,23 @@
   height: 90vh;
 }
 
-.popular h1 {
+.new-collection h1 {
   color: #171717;
   font-size: 50px;
   font-weight: 600;
   margin-top: 20px;
 }
 
-.popular hr {
+.new-collection hr {
   width: 200px !important;
   height: 6px !important;
   border-radius: 10px;
   background: #252525 !important;
 }
 
-.popular-item {
-  margin-top: 50px !important;
-  display: flex;
+.collections {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  margin-top: 50px;
   gap: 30px;
 }
